--- a/pmd.html
+++ b/pmd.html
@@ -58,23 +58,11 @@
                                                                                                                                                                                 <li class="collapsed">
                           <a href="project-info.html" title="Projektinformationen">Projektinformationen</a>
                   </li>
-                                                                                                                                                                                          <li class="expanded">
+                                                                                                                  <li class="expanded">
                           <a href="project-reports.html" title="Projektberichte">Projektberichte</a>
                     <ul>
                       <li class="none">
-                          <a href="xref/index.html" title="Quellcode Xref">Quellcode Xref</a>
-            </li>
-                      <li class="none">
                           <a href="xref-test/index.html" title="Test Quellcode Xref">Test Quellcode Xref</a>
-            </li>
-                      <li class="none">
-                          <a href="emma/index.html" title="EMMA Testabdeckung">EMMA Testabdeckung</a>
-            </li>
-                      <li class="none">
-                          <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
-            </li>
-                      <li class="none">
-                          <a href="jdepend-report.html" title="JDepend">JDepend</a>
             </li>
                       <li class="none">
                           <a href="cpd.html" title="CPD Bericht">CPD Bericht</a>
@@ -98,7 +86,8 @@
 <h2>PMD Ergebnisse<a name="PMD_Ergebnisse"></a></h2>
 <p>Dieses Dokument enth&#xe4;lt die Ergebnisse von <a class="externalLink" href="http://pmd.sourceforge.net/">PMD</a> 5.0.2.</p></div>
 <div class="section">
-<h2>Dateien<a name="Dateien"></a></h2></div>
+<h2>Dateien<a name="Dateien"></a></h2>
+<p>PMD hat keine Probleme in dem Quellcode gefunden.</p></div>
       </div>
     </div>
     <div class="clear">
