--- a/license.html
+++ b/license.html
@@ -30,7 +30,10 @@
         <span id="publishDate">Zuletzt Publiziert: 2014-05-16</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">        
+            <div class="xright">                    <a href="http://www.github.com" class="externalLink" title="GitHub">GitHub</a>
+            |
+                        <a href="https://github.com/FunThomas424242/jbehave.example" class="externalLink" title="jBehave.Example">jBehave.Example</a>
+              
                     
       </div>
       <div class="clear">
