--- a/xref-test/jbehave/example/stack/StackSteps.html
+++ b/xref-test/jbehave/example/stack/StackSteps.html
@@ -45,12 +45,12 @@
 <a class="jxr_linenumber" name="35" href="#35">35</a>  
 <a class="jxr_linenumber" name="36" href="#36">36</a>      @Then(<span class="jxr_string">"liegt das Wort $word ganz oben auf dem Stack."</span>)
 <a class="jxr_linenumber" name="37" href="#37">37</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> theResultingElementShouldBe(<strong class="jxr_keyword">final</strong> String word) {
-<a class="jxr_linenumber" name="38" href="#38">38</a>          Assert.assertEquals(<strong class="jxr_keyword">this</strong>.stackUnderTest.search(word), 1);
+<a class="jxr_linenumber" name="38" href="#38">38</a>          Assert.assertEquals(1, <strong class="jxr_keyword">this</strong>.stackUnderTest.search(word));
 <a class="jxr_linenumber" name="39" href="#39">39</a>      }
 <a class="jxr_linenumber" name="40" href="#40">40</a>  
 <a class="jxr_linenumber" name="41" href="#41">41</a>      @Then(<span class="jxr_string">"ist die erwartete Position $pos."</span>)
 <a class="jxr_linenumber" name="42" href="#42">42</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> thePositionReturnedShouldBe(<strong class="jxr_keyword">final</strong> <strong class="jxr_keyword">int</strong> pos) {
-<a class="jxr_linenumber" name="43" href="#43">43</a>          Assert.assertEquals(<strong class="jxr_keyword">this</strong>.stackUnderTest.search(<strong class="jxr_keyword">this</strong>.searchElement), pos);
+<a class="jxr_linenumber" name="43" href="#43">43</a>          Assert.assertEquals(pos, <strong class="jxr_keyword">this</strong>.stackUnderTest.search(<strong class="jxr_keyword">this</strong>.searchElement));
 <a class="jxr_linenumber" name="44" href="#44">44</a>      }
 <a class="jxr_linenumber" name="45" href="#45">45</a>  }
 </pre>
