Building site for 1.0-SNAPSHOT

--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JBehave Example - Continuous-Integration</title>
+    <title>JBehave Example - Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -68,8 +68,8 @@
                           <a href="plugin-management.html" title="Plugin-Management">Plugin-Management</a>
             </li>
                       <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
+            <strong>Distribution Management</strong>
+          </li>
                       <li class="none">
                           <a href="dependency-info.html" title="Abhängigkeiten Information">Abhängigkeiten Information</a>
             </li>
@@ -83,8 +83,8 @@
                           <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
             </li>
                       <li class="none">
-            <strong>Continuous-Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
+            </li>
                       <li class="none">
                           <a href="plugins.html" title="Plugins">Plugins</a>
             </li>
@@ -116,16 +116,8 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>&#xdc;bersicht<a name="abersicht"></a></h2><a name="abersicht"></a>
-<p>Dieses Projekt verwendet ein Continuous Integration System.</p></div>
-<div class="section">
-<h2>Zugriff<a name="Zugriff"></a></h2><a name="Zugriff"></a>
-<p>Es folgt ein Verweis auf das von diesem Projekt verwendete Continuous-Integration-System.</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.org/FunThomas424242/jbehave.example">https://travis-ci.org/FunThomas424242/jbehave.example</a></pre></div></div>
-<div class="section">
-<h2>Berichterstatter<a name="Berichterstatter"></a></h2><a name="Berichterstatter"></a>
-<p>Es wurden keine Berichterstatter definiert.</p></div>
+<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
+<p>No distribution management is defined for this project.</p></div>
       </div>
     </div>
     <div class="clear">
