--- a/sitemap.html
+++ b/sitemap.html
@@ -59,7 +59,7 @@ Navigationsübersicht</title>
           </ul>
                        <h5>Projektdokumentation</h5>
                   <ul>
-                                                                                                                                                                                <li class="collapsed">
+                                                                                                                                                                                                                                                                                            <li class="collapsed">
                           <a href="project-info.html" title="Projektinformationen">Projektinformationen</a>
                   </li>
                                                                                                         <li class="collapsed">
@@ -101,19 +101,31 @@ Navigationsübersicht</title>
 
 <ul>
 
-<li><a href="dependencies.html">Abh&#xe4;ngigkeiten</a></li>
+<li><a href="index.html">Willkommen bei</a></li>
 
-<li><a href="team-list.html">Projektteam</a></li>
+<li><a href="plugin-management.html">Plugin-Management</a></li>
+
+<li><a href="distribution-management.html">Distribution Management</a></li>
+
+<li><a href="dependency-info.html">Abh&#xe4;ngigkeiten Information</a></li>
+
+<li><a href="source-repository.html">Versionskontrolle</a></li>
 
 <li><a href="mail-lists.html">Mailinglisten</a></li>
 
+<li><a href="issue-tracking.html">Issue-Tracker</a></li>
+
 <li><a href="integration.html">Continuous-Integration</a></li>
 
-<li><a href="issue-tracking.html">Issue-Tracker</a></li>
+<li><a href="plugins.html">Plugins</a></li>
 
 <li><a href="license.html">Projektlizenz</a></li>
 
-<li><a href="source-repository.html">Versionskontrolle</a></li></ul></li>
+<li><a href="team-list.html">Projektteam</a></li>
+
+<li><a href="project-summary.html">Zusammenfassung</a></li>
+
+<li><a href="dependencies.html">Abh&#xe4;ngigkeiten</a></li></ul></li>
 
 <li><a href="./project-reports.html">Projektberichte</a>
 
