--- a/dependencies.html
+++ b/dependencies.html
@@ -58,30 +58,48 @@
           </ul>
                        <h5>Projektdokumentation</h5>
                   <ul>
-                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                                                                                                                                                      <li class="expanded">
                           <a href="project-info.html" title="Projektinformationen">Projektinformationen</a>
                     <ul>
                       <li class="none">
-            <strong>Abhängigkeiten</strong>
-          </li>
+                          <a href="index.html" title="Willkommen bei">Willkommen bei</a>
+            </li>
                       <li class="none">
-                          <a href="team-list.html" title="Projektteam">Projektteam</a>
+                          <a href="plugin-management.html" title="Plugin-Management">Plugin-Management</a>
+            </li>
+                      <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
+                      <li class="none">
+                          <a href="dependency-info.html" title="Abhängigkeiten Information">Abhängigkeiten Information</a>
+            </li>
+                      <li class="none">
+                          <a href="source-repository.html" title="Versionskontrolle">Versionskontrolle</a>
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailinglisten">Mailinglisten</a>
             </li>
                       <li class="none">
+                          <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
+            </li>
+                      <li class="none">
                           <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
             </li>
                       <li class="none">
-                          <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
+                          <a href="plugins.html" title="Plugins">Plugins</a>
             </li>
                       <li class="none">
                           <a href="license.html" title="Projektlizenz">Projektlizenz</a>
             </li>
                       <li class="none">
-                          <a href="source-repository.html" title="Versionskontrolle">Versionskontrolle</a>
+                          <a href="team-list.html" title="Projektteam">Projektteam</a>
             </li>
+                      <li class="none">
+                          <a href="project-summary.html" title="Zusammenfassung">Zusammenfassung</a>
+            </li>
+                      <li class="none">
+            <strong>Abhängigkeiten</strong>
+          </li>
               </ul>
         </li>
                                                                                                         <li class="collapsed">
