--- a/dependency-info.html
+++ b/dependency-info.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JBehave Example - Continuous-Integration</title>
+    <title>JBehave Example - Abhängigkeiten Information</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -71,8 +71,8 @@
                           <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
             </li>
                       <li class="none">
-                          <a href="dependency-info.html" title="Abhängigkeiten Information">Abhängigkeiten Information</a>
-            </li>
+            <strong>Abhängigkeiten Information</strong>
+          </li>
                       <li class="none">
                           <a href="source-repository.html" title="Versionskontrolle">Versionskontrolle</a>
             </li>
@@ -83,8 +83,8 @@
                           <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
             </li>
                       <li class="none">
-            <strong>Continuous-Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
+            </li>
                       <li class="none">
                           <a href="plugins.html" title="Plugins">Plugins</a>
             </li>
@@ -116,16 +116,43 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>&#xdc;bersicht<a name="abersicht"></a></h2><a name="abersicht"></a>
-<p>Dieses Projekt verwendet ein Continuous Integration System.</p></div>
+<h2>Abh&#xe4;ngigkeiten Information<a name="Abhngigkeiten_Information"></a></h2><a name="Abhngigkeiten_Information"></a>
 <div class="section">
-<h2>Zugriff<a name="Zugriff"></a></h2><a name="Zugriff"></a>
-<p>Es folgt ein Verweis auf das von diesem Projekt verwendete Continuous-Integration-System.</p>
+<h3>Apache Maven<a name="Apache_Maven"></a></h3><a name="Apache_Maven"></a>
 <div class="source">
-<pre><a class="externalLink" href="https://travis-ci.org/FunThomas424242/jbehave.example">https://travis-ci.org/FunThomas424242/jbehave.example</a></pre></div></div>
+<pre>&lt;dependency&gt;
+  &lt;groupId&gt;gh.funthomas424242&lt;/groupId&gt;
+  &lt;artifactId&gt;jbehave.example&lt;/artifactId&gt;
+  &lt;version&gt;1.0-SNAPSHOT&lt;/version&gt;
+&lt;/dependency&gt;</pre></div></div>
 <div class="section">
-<h2>Berichterstatter<a name="Berichterstatter"></a></h2><a name="Berichterstatter"></a>
-<p>Es wurden keine Berichterstatter definiert.</p></div>
+<h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
+<div class="source">
+<pre>'gh.funthomas424242:jbehave.example:jar:1.0-SNAPSHOT'</pre></div></div>
+<div class="section">
+<h3>Apache Ant<a name="Apache_Ant"></a></h3><a name="Apache_Ant"></a>
+<div class="source">
+<pre>&lt;dependency org=&quot;gh.funthomas424242&quot; name=&quot;jbehave.example&quot; rev=&quot;1.0-SNAPSHOT&quot;&gt;
+  &lt;artifact name=&quot;jbehave.example&quot; type=&quot;jar&quot; /&gt;
+&lt;/dependency&gt;</pre></div></div>
+<div class="section">
+<h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
+<div class="source">
+<pre>@Grapes(
+@Grab(group='gh.funthomas424242', module='jbehave.example', version='1.0-SNAPSHOT')
+)</pre></div></div>
+<div class="section">
+<h3>Grails<a name="Grails"></a></h3><a name="Grails"></a>
+<div class="source">
+<pre>compile 'gh.funthomas424242:jbehave.example:1.0-SNAPSHOT'</pre></div></div>
+<div class="section">
+<h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
+<div class="source">
+<pre>[gh.funthomas424242/jbehave.example &quot;1.0-SNAPSHOT&quot;]</pre></div></div>
+<div class="section">
+<h3>SBT<a name="SBT"></a></h3><a name="SBT"></a>
+<div class="source">
+<pre>libraryDependencies += &quot;gh.funthomas424242&quot; %% &quot;jbehave.example&quot; % &quot;1.0-SNAPSHOT&quot;</pre></div></div></div>
       </div>
     </div>
     <div class="clear">
