--- a/plugin-management.html
+++ b/plugin-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JBehave Example - Continuous-Integration</title>
+    <title>JBehave Example - Plugin-Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -65,8 +65,8 @@
                           <a href="index.html" title="Willkommen bei">Willkommen bei</a>
             </li>
                       <li class="none">
-                          <a href="plugin-management.html" title="Plugin-Management">Plugin-Management</a>
-            </li>
+            <strong>Plugin-Management</strong>
+          </li>
                       <li class="none">
                           <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
             </li>
@@ -83,8 +83,8 @@
                           <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
             </li>
                       <li class="none">
-            <strong>Continuous-Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
+            </li>
                       <li class="none">
                           <a href="plugins.html" title="Plugins">Plugins</a>
             </li>
@@ -116,16 +116,48 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>&#xdc;bersicht<a name="abersicht"></a></h2><a name="abersicht"></a>
-<p>Dieses Projekt verwendet ein Continuous Integration System.</p></div>
-<div class="section">
-<h2>Zugriff<a name="Zugriff"></a></h2><a name="Zugriff"></a>
-<p>Es folgt ein Verweis auf das von diesem Projekt verwendete Continuous-Integration-System.</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.org/FunThomas424242/jbehave.example">https://travis-ci.org/FunThomas424242/jbehave.example</a></pre></div></div>
-<div class="section">
-<h2>Berichterstatter<a name="Berichterstatter"></a></h2><a name="Berichterstatter"></a>
-<p>Es wurden keine Berichterstatter definiert.</p></div>
+<h2>Plugin-Management<a name="Plugin-Management"></a></h2><a name="Plugin-Management"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-antrun-plugin/">maven-antrun-plugin</a></td>
+<td>1.3</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-assembly-plugin/">maven-assembly-plugin</a></td>
+<td>2.2-beta-5</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td>
+<td>2.3.2</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td>
+<td>2.4</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-release-plugin/">maven-release-plugin</a></td>
+<td>2.3.2</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
+<td>3.3</td></tr>
+<tr class="b">
+<td>org.eclipse.m2e</td>
+<td>lifecycle-mapping</td>
+<td>1.0.0</td></tr>
+<tr class="a">
+<td>org.jbehave</td>
+<td><a class="externalLink" href="http://jbehave.org">jbehave</a></td>
+<td>4.0-beta-7</td></tr>
+<tr class="b">
+<td>org.jbehave</td>
+<td><a class="externalLink" href="http://jbehave.org/jbehave-maven-plugin">jbehave-maven-plugin</a></td>
+<td>4.0-beta-7</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
