--- a/plugins.html
+++ b/plugins.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JBehave Example - Continuous-Integration</title>
+    <title>JBehave Example - Build-Plugins</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -83,11 +83,11 @@
                           <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
             </li>
                       <li class="none">
-            <strong>Continuous-Integration</strong>
-          </li>
-                      <li class="none">
-                          <a href="plugins.html" title="Plugins">Plugins</a>
+                          <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
             </li>
+                      <li class="none">
+            <strong>Plugins</strong>
+          </li>
                       <li class="none">
                           <a href="license.html" title="Projektlizenz">Projektlizenz</a>
             </li>
@@ -116,16 +116,87 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>&#xdc;bersicht<a name="abersicht"></a></h2><a name="abersicht"></a>
-<p>Dieses Projekt verwendet ein Continuous Integration System.</p></div>
+<h2>Build-Plugins<a name="Build-Plugins"></a></h2><a name="Build-Plugins"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th></tr>
+<tr class="b">
+<td>com.github.github</td>
+<td><a class="externalLink" href="https://github.com/github/maven-plugins">site-maven-plugin</a></td>
+<td>0.9</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-clean-plugin/">maven-clean-plugin</a></td>
+<td>2.5</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td>
+<td>2.3.2</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td>
+<td>2.4</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-deploy-plugin/">maven-deploy-plugin</a></td>
+<td>2.7</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-install-plugin/">maven-install-plugin</a></td>
+<td>2.4</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-jar-plugin/">maven-jar-plugin</a></td>
+<td>2.4</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-resources-plugin/">maven-resources-plugin</a></td>
+<td>2.6</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
+<td>3.3</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/surefire/maven-surefire-plugin">maven-surefire-plugin</a></td>
+<td>2.12.4</td></tr>
+<tr class="b">
+<td>org.jbehave</td>
+<td><a class="externalLink" href="http://jbehave.org/jbehave-maven-plugin">jbehave-maven-plugin</a></td>
+<td>4.0-beta-7</td></tr></table></div>
 <div class="section">
-<h2>Zugriff<a name="Zugriff"></a></h2><a name="Zugriff"></a>
-<p>Es folgt ein Verweis auf das von diesem Projekt verwendete Continuous-Integration-System.</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.org/FunThomas424242/jbehave.example">https://travis-ci.org/FunThomas424242/jbehave.example</a></pre></div></div>
-<div class="section">
-<h2>Berichterstatter<a name="Berichterstatter"></a></h2><a name="Berichterstatter"></a>
-<p>Es wurden keine Berichterstatter definiert.</p></div>
+<h2>Report-Plugins<a name="Report-Plugins"></a></h2><a name="Report-Plugins"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-checkstyle-plugin/">maven-checkstyle-plugin</a></td>
+<td>2.2</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/jxr/maven-jxr-plugin/">maven-jxr-plugin</a></td>
+<td>2.3</td></tr>
+<tr class="b">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-pmd-plugin/">maven-pmd-plugin</a></td>
+<td>3.0.1</td></tr>
+<tr class="a">
+<td>org.apache.maven.plugins</td>
+<td><a class="externalLink" href="http://maven.apache.org/plugins/maven-project-info-reports-plugin/">maven-project-info-reports-plugin</a></td>
+<td>2.7</td></tr>
+<tr class="b">
+<td>org.codehaus.mojo</td>
+<td><a class="externalLink" href="http://mojo.codehaus.org/emma-maven-plugin">emma-maven-plugin</a></td>
+<td>1.0-alpha-3</td></tr>
+<tr class="a">
+<td>org.codehaus.mojo</td>
+<td><a class="externalLink" href="http://mojo.codehaus.org/jdepend-maven-plugin">jdepend-maven-plugin</a></td>
+<td>2.0-beta-2</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
