--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>JBehave Example - Continuous-Integration</title>
+    <title>JBehave Example - Zusammenfassung</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -83,8 +83,8 @@
                           <a href="issue-tracking.html" title="Issue-Tracker">Issue-Tracker</a>
             </li>
                       <li class="none">
-            <strong>Continuous-Integration</strong>
-          </li>
+                          <a href="integration.html" title="Continuous-Integration">Continuous-Integration</a>
+            </li>
                       <li class="none">
                           <a href="plugins.html" title="Plugins">Plugins</a>
             </li>
@@ -95,8 +95,8 @@
                           <a href="team-list.html" title="Projektteam">Projektteam</a>
             </li>
                       <li class="none">
-                          <a href="project-summary.html" title="Zusammenfassung">Zusammenfassung</a>
-            </li>
+            <strong>Zusammenfassung</strong>
+          </li>
                       <li class="none">
                           <a href="dependencies.html" title="Abhängigkeiten">Abhängigkeiten</a>
             </li>
@@ -116,16 +116,46 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>&#xdc;bersicht<a name="abersicht"></a></h2><a name="abersicht"></a>
-<p>Dieses Projekt verwendet ein Continuous Integration System.</p></div>
+<h2>Zusammenfassung<a name="Zusammenfassung"></a></h2><a name="Zusammenfassung"></a>
 <div class="section">
-<h2>Zugriff<a name="Zugriff"></a></h2><a name="Zugriff"></a>
-<p>Es folgt ein Verweis auf das von diesem Projekt verwendete Continuous-Integration-System.</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.org/FunThomas424242/jbehave.example">https://travis-ci.org/FunThomas424242/jbehave.example</a></pre></div></div>
+<h3>Projektinformation<a name="Projektinformation"></a></h3><a name="Projektinformation"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Feld</th>
+<th>Wert</th></tr>
+<tr class="b">
+<td>Name</td>
+<td>JBehave Example</td></tr>
+<tr class="a">
+<td>Beschreibung</td>
+<td>-</td></tr>
+<tr class="b">
+<td>Webseite</td>
+<td><a class="externalLink" href="http://funthomas424242.github.io/jbehave.example/index.html">http://funthomas424242.github.io/jbehave.example/index.html</a></td></tr></table></div>
 <div class="section">
-<h2>Berichterstatter<a name="Berichterstatter"></a></h2><a name="Berichterstatter"></a>
-<p>Es wurden keine Berichterstatter definiert.</p></div>
+<h3>Projektorganisation<a name="Projektorganisation"></a></h3><a name="Projektorganisation"></a>
+<p>Dieses Projekt wird von keiner Organisation verwaltet.</p></div>
+<div class="section">
+<h3>Build-Information<a name="Build-Information"></a></h3><a name="Build-Information"></a>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Feld</th>
+<th>Wert</th></tr>
+<tr class="b">
+<td>GroupId</td>
+<td>gh.funthomas424242</td></tr>
+<tr class="a">
+<td>ArtifactId</td>
+<td>jbehave.example</td></tr>
+<tr class="b">
+<td>Version</td>
+<td>1.0-SNAPSHOT</td></tr>
+<tr class="a">
+<td>Typ</td>
+<td>jar</td></tr>
+<tr class="b">
+<td>JDK Rev</td>
+<td>-</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
