--- a/jbehave/jbehave.example.stack.StackSzenario.html
+++ b/jbehave/jbehave.example.stack.StackSzenario.html
@@ -9,7 +9,7 @@
 <div class="element inOrderTo"><span class="keyword inOrderTo">In order to</span> in einem Java Programm einen Stapel von Dingen abarbeiten zu k&ouml;nnen</div>
 <div class="element asA"><span class="keyword asA">As a</span> Entwickler</div>
 <div class="element iWantTo"><span class="keyword iWantTo">I want to</span> Schnittstellen und Implementierungen aus Java direkt nutzen
-Damit ich nicht immer eine eigene Stackverwaltung bauen muss.</div>
+Damit ich keine eigene Stackverwaltung bauen muss.</div>
 </div>
 <div class="scenario">
 <h2>Scenario: Grundlegende Stack Funktionen</h2>
